# BlockBlast-solver

./: .gitignore  CMakeLists.txt  README.md  blocks.c  blocks.h  blocks.json  main.c  printBlockUtils.c  printBlockUtils.h
assets/: sample.h
src/: blocks.c  blocks.h  main.c
src/utils/: util_blocks.c
src/utils/debug/: debug_print_blocks.c
src/vision/: get_block.cpp  get_block_coord.cpp
tools/: convert_block.py
utils/: printBlockUtils.h  util_blocks.c  util_blocks.h
utils/debug/: debug_print_blocks.c
utils/waydroid/: waydroid_comm.c  waydroid_comm.h
utils/waydroid/C/: waydroid_comm.c  waydroid_comm.h
utils/waydroid/python/: get_block.py  getblock.py  getcoord.py  readbuffer.py
utils/waydroid/vision/: get_block.cpp  get_grid.cpp  get_grid_origin.cpp
